--- a/css/checkbox.css
+++ b/css/checkbox.css
@@ -1,4 +1,4 @@
-input[type=radio] {
+input[type=checkbox] {
 	appearance: none;
 	position: relative;
 	vertical-align: text-bottom;
@@ -6,11 +6,12 @@ input[type=radio] {
 	box-sizing: border-box;
 	block-size: 1rem;
 	inline-size: 1rem;
-	border-radius: 1rem;
 	background: transparent;
+	border: 1px solid black;
+	cursor: pointer;
 }
 
-input[type=radio]::before {
+input[type=checkbox]::before {
 	content: '';
 	display: block;
 	box-sizing: border-box;
@@ -22,6 +23,6 @@ input[type=radio]::before {
 	background: transparent;
 }
 
-input[type=radio]:checked::before {
+input[type=checkbox]:checked::before {
 	background: black;
 }
