--- a/components/styles/radio.css
+++ b/components/styles/radio.css
@@ -6,24 +6,24 @@ input[type=radio] {
 	box-sizing: border-box;
 	block-size: 1rem;
 	inline-size: 1rem;
-	border: 1px solid black;
+	outline: 1px solid black;
 	border-radius: 1rem;
 	background: transparent;
+	cursor: pointer;
 }
 
-input[type=radio]::before {
+input[type=radio]::after {
 	content: '';
 	display: block;
 	box-sizing: border-box;
-	margin-block-start: calc(0.25rem - 1px);
-	margin-inline-start: calc(0.25rem - 1px);
+	margin-block-start: 0.25rem;
+	margin-inline-start: 0.25rem;
 	block-size: 0.5rem;
 	inline-size: 0.5rem;
 	border-radius: 0.5rem;
-	outline: 1px solid black;
 	background: transparent;
 }
 
-input[type=radio]:checked::before {
+input[type=radio]:checked::after {
 	background: black;
 }
