--- a/components/styles/switch.css
+++ b/components/styles/switch.css
@@ -1,28 +1,29 @@
-input[type=checkbox] {
+input[type=checkbox][role=switch] {
 	appearance: none;
 	position: relative;
 	vertical-align: text-bottom;
 	display: inline-block;
 	box-sizing: border-box;
 	block-size: 1rem;
-	inline-size: 1rem;
+	inline-size: 2rem;
+	outline: 1px solid black;
 	background: transparent;
-	border: 1px solid black;
 	cursor: pointer;
 }
 
-input[type=checkbox]::before {
+input[type=checkbox][role=switch]::before {
 	content: '';
 	display: block;
 	box-sizing: border-box;
-	margin-block-start: calc(0.25rem - 1px);
-	margin-inline-start: calc(0.25rem - 1px);
+	margin-block-start: 0.25rem;
+	margin-inline-start: 0.25rem;
 	block-size: 0.5rem;
 	inline-size: 0.5rem;
 	outline: 1px solid black;
 	background: transparent;
 }
 
-input[type=checkbox]:checked::before {
+input[type=checkbox][role=switch]:checked::before {
 	background: black;
+	margin-inline-start: 1.25rem;
 }
