add labels, input properties

--- a/components/styles/properties.css
+++ b/components/styles/properties.css
@@ -5,11 +5,15 @@
 	- remote (forms, submissions)
 */
 
+/*
+	There are always exceptions.
+	Broad strokes.
+*/
 :root {
-	--background: white;
-	--color-primary: black;
-	--color-secondary: blue;
-	--font: monospace;
-	--font-header: monospace;
-	--font-code: monospace;
+	/* inputs for forms */
+	--input-background: transparent;
+	--input-border: 1px solid black;
+	--input-outline: 1px solid blue;
+	--input-outline-offset: 8px;
+	--input-font-family: serif;
 }
