--- a/www/styles/drafts/checkbox.css
+++ b/www/styles/drafts/checkbox.css
@@ -28,3 +28,6 @@ input[type=checkbox]:checked::before {
 	outline: 1px solid black;
 	background: black;
 }
+
+
+input[type=checkbox] indeterminate {}
