--- a/drafts/checkbox.css
+++ b/drafts/checkbox.css
@@ -1,17 +1,18 @@
-input[type=checkbox][role=switch] {
+input[type=checkbox] {
 	appearance: none;
 	position: relative;
 	vertical-align: text-bottom;
 	display: inline-block;
 	box-sizing: border-box;
+	border-radius: 4px;
 	block-size: 1rem;
-	inline-size: 2rem;
-	outline: 1px solid black;
+	inline-size: 1rem;
 	background: transparent;
+	outline: 1px solid black;
 	cursor: pointer;
 }
 
-input[type=checkbox][role=switch]::before {
+input[type=checkbox]::before {
 	content: '';
 	display: block;
 	box-sizing: border-box;
@@ -19,11 +20,16 @@ input[type=checkbox][role=switch]::before {
 	margin-inline-start: 0.25rem;
 	block-size: 0.5rem;
 	inline-size: 0.5rem;
-	outline: 1px solid black;
+	outline: 1px solid #565656;
 	background: transparent;
 }
 
-input[type=checkbox][role=switch]:checked::before {
+input[type=checkbox]:checked::before {
+	content: '\2714';
+	outline: 1px solid black;
 	background: black;
-	margin-inline-start: 1.25rem;
 }
+
+input[type=checkbox]:indeterminate {}
+
+input[type=checkbox]:disabled {}
