--- a/drafts/radio.css
+++ b/drafts/radio.css
@@ -1,18 +1,18 @@
-input[type=checkbox] {
+input[type=radio] {
 	appearance: none;
 	position: relative;
 	vertical-align: text-bottom;
 	display: inline-block;
 	box-sizing: border-box;
-	border-radius: 4px;
 	block-size: 1rem;
 	inline-size: 1rem;
-	background: transparent;
 	outline: 1px solid black;
+	border-radius: 1rem;
+	background: transparent;
 	cursor: pointer;
 }
 
-input[type=checkbox]::before {
+input[type=radio]::after {
 	content: '';
 	display: block;
 	box-sizing: border-box;
@@ -20,14 +20,14 @@ input[type=checkbox]::before {
 	margin-inline-start: 0.25rem;
 	block-size: 0.5rem;
 	inline-size: 0.5rem;
-	outline: 1px solid #565656;
+	border-radius: 0.5rem;
 	background: transparent;
 }
 
-input[type=checkbox]:checked::before {
-	outline: 1px solid black;
+input[type=radio]:checked::after {
 	background: black;
 }
 
+input[type=radio]:indeterminate {}
 
-input[type=checkbox] indeterminate {}
+input[type=radio]:disabled {}
