--- a/www/styles/radio.css
+++ b/www/styles/radio.css
@@ -1,10 +1,11 @@
-input[role=switch] {
+input[type=radio] {
 	appearance: none;
-	inline-size: 3rem;
+	inline-size: 1rem;
 	block-size: 1rem;
 	border: 1px solid black;
+	border-radius: 50%;
 }
 
-input[role=switch]:checked {
+input[type=radio]:checked {
 	background-color: darkgray;
 }
