--- a/www/styles/button.css
+++ b/www/styles/button.css
@@ -1,6 +1,6 @@
 button, input[type=button] {
 	appearance: none;
-	background: transparent;
+	background: #efefef;
 	border: 1px solid black;
 	color: #000000;
 	padding-inline: 1rem;
@@ -14,7 +14,7 @@ button:not([disabled]):active, input[type=button]:not([disabled]):active {
 }
 
 button:focus, input[type=button]:focus {
-	outline: 1px solid #676767;
+	outline: 2px solid #676767;
 	outline-offset: 6px;
 	background-color: #efefef;
 }
@@ -26,8 +26,17 @@ button:disabled, input[type=button]:disabled {
 }
 
 /* submit button */
+button[type=reset], input[type=reset] {
+	background: #787878;
+	border: 1px solid black;
+	color: white;
+	padding-inline: 1rem;
+	padding-block: 0.5rem;
+	border-radius: 4px;
+}
+
 button[type=submit], input[type=submit] {
-	background: #3a3a3a;
+	background: #787878;
 	border: 1px solid black;
 	color: white;
 	padding-inline: 1rem;
