--- a/www/styles/typography.css
+++ b/www/styles/typography.css
@@ -14,6 +14,7 @@ body {
 	font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+
 /* p {
 	margin-block-start: 0.5rem;
 	padding-block-end: 0.5rem;
@@ -91,4 +92,6 @@ h6 {
 
 input {
 	line-height: 1rem;
+	margin-top: 0.5rem;
+	margin-bottom: -0.5rem;
 }
