--- a/www/mod.css
+++ b/www/mod.css
@@ -1,6 +1,6 @@
 /* wireframe component styles */
+@import "./styles/background-grid.css";
 @import "./styles/baseboard.css";
-@import "./styles/typography.css";
 
 @import "./styles/input.css";
 @import "./styles/button.css";
