--- a/www/styles/baseline_grid.css
+++ b/www/styles/baseline_grid.css
@@ -3,55 +3,58 @@
 }
 
 body {
-	/* font-family: 'Courier New', Courier, monospace; */
-	font-family: Georgia, 'Times New Roman', Times, serif;
+	font-family: 'Courier New', Courier, monospace;
+	/* font-family: Georgia, 'Times New Roman', Times, serif; */
 }
 
 p {
 	line-height: 2rem;
-	margin-top: -0.5rem;
-	margin-bottom: 0.5rem;
-	outline: 1px solid #343434;
+	font-size: 1rem;
+	margin-block-start: calc((2rem - 1cap) * 0.5);
+	margin-block-end: calc((2rem - 1cap) * -0.5);
 }
 
 h1 {
-	line-height: 2rem;
-	margin-block-start: -0.25rem;
-	margin-block-end: 0.25rem;
+	line-height: 4rem;
+	font-size: 4rem;
+	margin-block-start: calc((4rem - 1cap) * 0.5);
+	margin-block-end: calc((4rem - 1cap) * -0.5);
 }
 
 h2 {
-	line-height: 2rem;
-	margin-block-start: -0.5rem;
-	margin-block-end: 0.5rem;
+	line-height: 4rem;
+	font-size: 3rem;
+	margin-block-start: calc((4rem - 1cap) * 0.5);
+	margin-block-end: calc((4rem - 1cap) * -0.5);
 }
 
 h3 {
-	line-height: 2rem;
-	margin-block-start: -0.5rem;
-	margin-block-end: 0.5rem;
+	line-height: 4rem;
+	font-size: 2.5rem;
+	margin-block-start: calc((4rem - 1cap) * 0.5);
+	margin-block-end: calc((4rem - 1cap) * -0.5);
 }
 
 h4 {
 	line-height: 2rem;
-	margin-top: -0.5rem;
-	margin-bottom: 0.5rem;
+	margin-block-start: calc((2rem - 1cap) * 0.5);
+	margin-block-end: calc((2rem - 1cap) * -0.5);
 }
 
 h5 {
 	line-height: 2rem;
-	margin-top: -0.6rem;
-	margin-bottom: 0.6rem;
+	margin-block-start: calc((2rem - 1cap) * 0.5);
+	margin-block-end: calc((2rem - 1cap) * -0.5);
 }
 
 h6 {
 	line-height: 2rem;
-	margin-top: -0.7rem;
-	margin-bottom: 0.7rem;
+	margin-block-start: calc((2rem - 1cap) * 0.5);
+	margin-block-end: calc((2rem - 1cap) * -0.5);
 }
 
 input {
 	line-height: 1rem;
-	margin-top: -0.5rem;
-	margin-bottom: 0.5rem;
+	margin-block-start: calc((2rem - 1cap) * 0.5);
+	margin-block-end: calc((2rem - 1cap) * -0.5);
 }
