--- a/www/styles/baseline_grid_typography.css
+++ b/www/styles/baseline_grid_typography.css
@@ -1,17 +1,8 @@
-:root {
-	/* line-height: 2rem; */
-}
-
-body {
-	/* font-family: 'Courier New', Courier, monospace; */
-	font-family: Georgia, 'Times New Roman', Times, serif;
-}
-
 p {
 	line-height: 2rem;
 	font-size: 1rem;
-	margin-block-start: calc((2rem - 1cap) * 0.5);
-	margin-block-end: calc((2rem - 1cap) * -0.5);
+	margin-block-start: calc((2em - 1cap) * 0.5);
+	margin-block-end: calc((2em - 1cap) * -0.5);
 }
 
 h1 {
@@ -56,28 +47,35 @@ h6 {
 
 /* places for fonts and line heights */
 input[type=text], input[type=password], input[type=email] {
-	/* line-height: 2rem; */
+	line-height: 2rem;
 	block-size: 2rem;
 	font-size: 1rem;
-	line-height: 2rem;
-	/* padding-block-start: calc(1rem - 1cap); */
-	overflow: visible;
 
-	margin-block-start: calc((2rem - 1cap));
-	margin-block-end: calc((1rem - 1cap) * -1);
-
-	/* padding-block-start: calc(1rem - 1cap);
-	padding-block-end: calc(1rem - 1cap); */
-
-	/* padding-block-start: 1cap; */
-	/* padding-block-end: calc(0.5cap - 2px); */
-
+	/* font size - capsize - padding */
+	margin-block-start: calc(((1rem - 1cap) * 1) - 0.25rem);
+	margin-block-end: calc(((1rem - 1cap) * -1) - 0.25rem);
 }
 
-input[type=time], input[type=date] {
+input[type=time] {
 	block-size: 2rem;
 	font-size: 1rem;
-	margin-block-start: calc((1rem - 1cap));
-	margin-block-end: calc( -1 * (1rem - 1cap));
+	margin-block-start: calc((1cap));
+	margin-block-end: calc( -1 * (1cap));
 	border: none;
+}
+
+input[type=date] {
+	block-size: 2rem;
+	font-size: 1rem;
+	margin-block-start: calc((1em - 1cap));
+	margin-block-end: calc( -1 * (1em - 1cap));
+	border: none;
+}
+
+input[type=file] {
+	line-height: 2rem;
+	font-size: 1rem;
+	
+	margin-block-start: calc((1em - 1cap));
+	margin-block-end: calc( -1 * (1em - 1cap));
 }
