--- a/www/styles/button.css
+++ b/www/styles/button.css
@@ -1,11 +1,15 @@
 button, input[type=button] {
-	/* appearance: none; */
-	background: #efefef;
-	border: 1px solid black;
+	appearance: none;
+	background-color: var(--interactable-0);
+	border: none;
 	color: #000000;
-	/* padding-inline: 1rem;
-	padding-block: 0.25rem; */
-	border-radius: 4px;
+	padding-inline: 1rem;
+	padding-block: 0.4rem;
+	font-family: var(--input-font-family);
+	font-size: 1rem;
+	font-weight: 100;
+	cursor: pointer;
+	border-radius: var(--border-radius);
 }
 
 button:not([disabled]):active, input[type=button]:not([disabled]):active {
@@ -20,26 +24,25 @@ button:focus, input[type=button]:focus {
 }
 
 button:disabled, input[type=button]:disabled {
-	border: 1px solid lightgray;
+	border: 2px solid lightgray;
 	color: lightgray;
 	cursor: not-allowed;
 }
 
 /* submit button */
 button[type=reset], input[type=reset] {
-	background: #787878;
+	background: transparent;
 	border: 1px solid black;
-	color: white;
 	padding-inline: 1rem;
 	padding-block: 0.5rem;
-	border-radius: 4px;
+	border-radius: var(--border-radius);
 }
 
-button[type=submit], input[type=submit] {
-	background: #787878;
+button[type=submit], input[type=submit], ::file-selector-button {
+	background: transparent;
 	border: 1px solid black;
-	color: white;
+	font-size: 1rem;
 	padding-inline: 1rem;
 	padding-block: 0.5rem;
-	border-radius: 4px;
+	border-radius: var(--border-radius);
 }
