--- a/www/styles/radio.css
+++ b/www/styles/radio.css
@@ -1,9 +1,15 @@
 input[type=radio] {
 	appearance: none;
-	inline-size: 1rem;
-	block-size: 1rem;
+	inline-size: 1.25rem;
+	background-color: var(--interactable-0);
+	block-size: 1.25rem;
 	border: 1px solid black;
 	border-radius: 50%;
+	cursor: pointer;
+}
+
+input[type=radio]:disabled {
+	cursor: not-allowed;
 }
 
 input[type=radio]:checked {
