--- a/www/styles/baseline_grid_typography.css
+++ b/www/styles/baseline_grid_typography.css
@@ -1,5 +1,7 @@
+/*  */
+
+
 p {
-	line-height: 2rem;
 	font-size: 1rem;
 	margin-block-start: calc((2em - 1cap) * 0.5);
 	margin-block-end: calc((2em - 1cap) * -0.5);
