--- a/www/styles/button.css
+++ b/www/styles/button.css
@@ -38,7 +38,7 @@ button[type=reset], input[type=reset] {
 	border-radius: var(--border-radius);
 }
 
-button[type=submit], input[type=submit], ::file-selector-button {
+button[type=submit], input[type=submit],  input::file-selector-button  {
 	background: transparent;
 	border: 1px solid black;
 	font-size: 1rem;
