--- a/www/styles/textarea.css
+++ b/www/styles/textarea.css
@@ -1,11 +1,11 @@
 textarea {
 	appearance: none;
-	border: none;
-	outline: 1px solid black;
+	border: var(--border);
 
 	/* border: 1px solid/ black; */
 	font-family: var(--input-font-family);
 	font-size: 1rem;
-	padding: 0.25rem 0.5rem;
+	padding: 0.5rem;
+	color: var(--color);
 	border-radius: var(--border-radius);
 }
