--- a/www/styles/baseboard.css
+++ b/www/styles/baseboard.css
@@ -58,12 +58,22 @@ summary {
 
 
 /* additions */
-:root {
-	font-family: var(--font-family);
-}
+
 body {
 	min-block-size: 100dvh;
 	
+}
+:focus {
+	outline: var(--outline);
+	outline-offset: 0;
+}
+::selection {
+	background-color: cornflowerblue;
+}
+
+::-webkit-calendar-picker-indicator {
+	background-color: white;
+	border-radius: 4px;
 }
 
 :disabled {
