--- a/www/styles/checkbox.css
+++ b/www/styles/checkbox.css
@@ -3,9 +3,8 @@ input[type=checkbox] {
 	background-color: var(--interactable-0);
 	inline-size: 1.25rem;
 	block-size: 1.25rem;
-	border: 1px solid black;
+	border: var(--border);
 	border-radius: var(--border-radius);
-
 	cursor: pointer;
 }
 
