--- a/www/styles/properties.css
+++ b/www/styles/properties.css
@@ -1,9 +1,11 @@
 :root {
 	/* Typography */
 	--line-height: 2rem;
+	--letter-spacing: 0.01em;
+	--font-size: 1rem;
 	--font-family: Arial, Helvetica, sans-serif;
-	/* --input-font-family: Georgia, 'Times New Roman', Times, serif;  */
-	--input-font-family: Arial, Helvetica, sans-serif; 
+	/* --font-family: Georgia, 'Times New Roman', Times, serif;  */
+	/* --input-font-family: Arial, Helvetica, sans-serif;  */
 
 	/* Interactivity Affordances */
 	--interactable-0: #f9f9f9; /* initial 'resting' state*/
@@ -12,4 +14,14 @@
 	--interactable-3: #a8a8a8; /* pressed state */
 	--interactable-4: #787878; /* checked state */
 	--border-radius: 2px;
+	--border: 1px solid black;
+	--outline: 4px solid cornflowerblue;
+}
+
+@media (prefers-color-scheme: dark) {
+	:root {
+		--color: white;
+		--background-color: #070707;
+		--border: 1px solid white;
+	}
 }
