--- a/www/styles/text.css
+++ b/www/styles/text.css
@@ -5,14 +5,17 @@ input[type=text], input[type=password], input[type=email] {
 	appearance: none;
 	display: relative;
 	background-color: transparent;
-	border: none;
+	border: var(--border);
 	font-size: 1rem;
-	color: black;
-	outline: 1px solid black;
-	padding: 0.25rem 0.5rem;
+	color: var(--color);
+	padding: 0.25rem;
 	font-family: var(--input-font-family);
-	padding: 0.5rem 1rem;
+	padding: 0.5rem;
 	border-radius: var(--border-radius);
+}
+
+input::marker {
+	color: var(--color);
 }
 
 input[type=text]:disabled, input[type=password]:disabled, input[type=email]:disabled {
@@ -24,10 +27,13 @@ input[type=time], input[type=date], input[type=color], input[type=number] {
 	appearance: none;
 	background-color: transparent;
 	font-size: 1rem;
-	border: none;
-	padding: 0.5rem 1rem;
-	outline: 1px solid black;
+	border: var(--border);
+	padding: 0.5rem;
+	color: var(--color);
 	font-family: var(--input-font-family);
 	border-radius: var(--border-radius);
 }
 
+input[type=time]:focus, input[type=date]:focus, input[type=color]:focus, input[type=number]:focus {
+	outline: var(--outline);
+}
