--- a/styles/checkbox.css
+++ b/styles/checkbox.css
@@ -1,6 +1,6 @@
 input[type=checkbox] {
 	appearance: none;
-	background-color: var(--interactable-0);
+	/* background-color: var(--interactable-0); */
 	inline-size: 1.25rem;
 	block-size: 1.25rem;
 	border: var(--border);
