--- a/styles/properties.css
+++ b/styles/properties.css
@@ -21,7 +21,7 @@
 @media (prefers-color-scheme: dark) {
 	:root {
 		--color: white;
-		--background-color: #070707;
+		--background-color: #17181A;
 		--border: 1px solid white;
 	}
 }
