--- a/styles/select.css
+++ b/styles/select.css
@@ -1,12 +1,12 @@
 select, select[multiple] {
 	background-color: transparent;
-	border: var(--border);
 	font-size: 1rem;
 	padding: 0.5rem;
 	cursor: pointer;
 	color: var(--color);
 	font-family: var(--font-family);
-	border-radius: var(--border-radius);
+	background-color: var(--action_bg-0);
+	border: var(--button_border);
 }
 
 select:focus {
