--- a/styles/checkbox.css
+++ b/styles/checkbox.css
@@ -1,10 +1,10 @@
 input[type=checkbox] {
 	appearance: none;
-	/* background-color: var(--interactable-0); */
 	inline-size: 1.25rem;
 	block-size: 1.25rem;
-	border: var(--border);
-	border-radius: var(--border-radius);
+	background-color: var(--action_bg-0);
+	border: none;
+	border: var(--button_border);
 	cursor: pointer;
 }
 
