--- a/styles/text.css
+++ b/styles/text.css
@@ -1,17 +1,17 @@
 /* places for fonts and line heights */
 
 input[type=text], input[type=password], input[type=email] {
-	background: none;
 	appearance: none;
 	display: relative;
-	background-color: transparent;
-	border: var(--border);
+	background-color: var(--action_bg-0);
+	border: var(--text-input-border);
 	font-size: 1rem;
 	color: var(--color);
 	padding: 0.25rem;
 	font-family: var(--input-font-family);
 	padding: 0.5rem;
 	border-radius: var(--border-radius);
+	border-bottom: var(--text-input_border-bottom);
 }
 
 input::selection {
@@ -23,15 +23,22 @@ input[type=text]:disabled, input[type=password]:disabled, input[type=email]:disa
 }
 
 input[type=time], input[type=date], input[type=color], input[type=number] {
-	background: none;
 	appearance: none;
 	background-color: transparent;
 	font-size: 1rem;
-	border: var(--border);
 	padding: 0.5rem;
 	color: var(--color);
 	font-family: var(--input-font-family);
-	border-radius: var(--border-radius);
+	background-color: var(--action_bg-0);
+	border: var(--button_border);
+}
+
+input[type=time], input[type=date] {
+	cursor: text;
+}
+
+input[type=color] {
+	cursor: pointer;
 }
 
 input[type=time]:focus, input[type=date]:focus, input[type=color]:focus, input[type=number]:focus {
