--- a/styles/textarea.css
+++ b/styles/textarea.css
@@ -1,9 +1,7 @@
 textarea {
 	appearance: none;
-	background-color: transparent;
-	border: var(--border);
-
-	/* border: 1px solid/ black; */
+	background-color: var(--action_bg-0);
+	border: var(--button_border);
 	font-family: var(--input-font-family);
 	font-size: 1rem;
 	padding: 0.5rem;
