--- a/styles/typography.css
+++ b/styles/typography.css
@@ -10,45 +10,48 @@ body {
 }
 
 p {
-	font-size: 1rem;
+	font-size: var(--font-size);
 	max-inline-size: 80ch;
 }
 
 h1 {
-	line-height: 4rem;
-	font-size: 4rem;
+	line-height: var(--font-size-h1);
+	font-size: var(--font-size-h1);
 	font-weight: 700;
 }
 
 h2 {
-	line-height: 3rem;
-	font-size: 3rem;
+	line-height: var(--font-size-h2);
+	font-size: var(--font-size-h2);
 	font-weight: 700;
 }
 
 h3 {
-	line-height: 3rem;
-	font-size: 2.25rem;
+	line-height: var(--font-size-h3);
+	font-size: var(--font-size-h3);
 	font-weight: 700;
-
 }
 
 h4 {
-	font-size: 1.75rem;
+	line-height: var(--font-size-h4);
+	font-size: var(--font-size-h4);
 	font-weight: 700;
 
 }
 
 h5 {
-	font-size: 1.25rem;
+	line-height: var(--font-size-h5);
+	font-size: var(--font-size-h5);
 	font-weight: 700;
 }
 
 h6 {
-	font-size: 1rem;
+	line-height: var(--font-size-h6);
+	font-size: var(--font-size-h6);
 	font-weight: 700;
 }
 
 ::selection {
-	background-color: cornflowerblue;
+	background-color: var(--selection-bg-color);
+	color: var(--selection-color);
 }
