--- a/themes/wireframe.css
+++ b/themes/wireframe.css
@@ -1,19 +1,39 @@
 :root {
 	color-scheme: light dark;
-	/* Root */
-	--background-color: light-dark(#f9f9f9, #17181A);
 
 	/* debug */
 	--baseline-grid-color: light-dark(#a8a8a8, #f5f5f5);
-	
+
+	/* Root */
+	--transition-time: 30ms;
+	--background-color: light-dark(#f9f9f9, #17181A);
+
 	/* Typography */
 	--line-height: 2rem;
-	--font-size: 1rem;
+	--font-size-h6: 4rem;
 	--font-family: Arial, Helvetica, sans-serif;
 	--color: light-dark(black, white);
+	--selection-bg-color: light-dark(cornflowerblue, cornflowerblue);
+	--selection-color: light-dark(white, black);
+
+	--font-size: 1rem;
+	--font-size-h6: 1rem;
+	--font-size-h5: 1.25rem;
+	--font-size-h4: 1.75rem;
+	--font-size-h3: 2.25rem;
+	--font-size-h2: 3rem;
+	--font-size-h1: 4rem;
+
+	/* baseline grid */
+	--line-height-baseline-2x: calc(var(--line-height) * 2);
+
+	--font-family:  Arial, Helvetica, sans-serif;
+	--font-family-headers:  Arial, Helvetica, sans-serif;
+	--font-family-input-text:  Arial, Helvetica, sans-serif;
+	--font-family-input-numbers:  Arial, Helvetica, sans-serif;
 
 	/* Grids */
-	--gap: 4ch;
+	--gap: 1rem;
 
 	/* Articles */
 	--max-char-width: 64ch;
@@ -25,9 +45,11 @@
 	--action_bg-3: #a8a8a8; /* pressed state */
 	--action_bg-4: #787878; /* checked state */
 	
+	--border: 1px solid light-dark(black, white);
+	
 	/* Buttons */
-	--button_border-radius: 2px;
 	--button_border: 1px solid light-dark(black, white);
+	--button_border-radius: 0px;
 	--button_font-weight: 700;
 
 	/* Text inputs */
@@ -36,10 +58,4 @@
 
 	/* Focus */
 	--outline: 4px solid cornflowerblue;
-}
-
-@media (prefers-color-scheme: dark) {
-	:root {
-		--border: 1px solid white;
-	}
 }
