--- a/styles/root.css
+++ b/styles/root.css
@@ -1,13 +1,6 @@
-/* additions */
-
-input:hover:not(:disabled), button:hover:not(:disabled), select:hover:not(:disabled), textarea:hover:not(:disabled) {
-	outline: var(--outline);
-}
-input:focus, button:focus, textarea:focus, select:focus {
-	outline: var(--outline);
-	outline-offset: 0;
-}
-
-:disabled {
-	cursor: not-allowed;
+:root {
+	line-height: var(--line-height);
+	font-family: var(--font-family);
+	background: var(--bg);
+	color: var(--color);
 }
