--- a/styles/typography.css
+++ b/styles/typography.css
@@ -1,12 +1,7 @@
 :root {
 	line-height: var(--line-height);
 	font-family: var(--font-family);
-	letter-spacing: var(--letter-spacing);
 	color: var(--color);
-}
-
-body {
-	background-color: var(--background-color);
 }
 
 p {
@@ -15,43 +10,48 @@ p {
 }
 
 h1 {
-	line-height: var(--font-size-h1);
-	font-size: var(--font-size-h1);
+	line-height: var(--h1_font-size);
+	font-size: var(--h1_font-size);
 	font-weight: 700;
+	font-family: var(--header_font-family);
 }
 
 h2 {
-	line-height: var(--font-size-h2);
-	font-size: var(--font-size-h2);
+	line-height: var(--h2_font-size);
+	font-size: var(--h2_font-size);
 	font-weight: 700;
+	font-family: var(--header_font-family);
 }
 
 h3 {
-	line-height: var(--font-size-h3);
-	font-size: var(--font-size-h3);
+	line-height: var(--h3_font-size);
+	font-size: var(--h3_font-size);
 	font-weight: 700;
+	font-family: var(--header_font-family);
 }
 
 h4 {
-	line-height: var(--font-size-h4);
-	font-size: var(--font-size-h4);
+	line-height: var(--h4_font-size);
+	font-size: var(--h4_font-size);
 	font-weight: 700;
-
+	font-family: var(--sub-header_font-family);
 }
 
 h5 {
-	line-height: var(--font-size-h5);
-	font-size: var(--font-size-h5);
+	line-height: var(--h5_font-size);
+	font-size: var(--h5_font-size);
 	font-weight: 700;
+	font-family: var(--sub-header_font-family);
 }
 
 h6 {
-	line-height: var(--font-size-h6);
-	font-size: var(--font-size-h6);
+	line-height: var(--h6_font-size);
+	font-size: var(--h6_font-size);
 	font-weight: 700;
+	font-family: var(--sub-header_font-family);
 }
 
 ::selection {
-	background-color: var(--selection-bg-color);
-	color: var(--selection-color);
+	background-color: var(--selection_bg-color);
+	color: var(--selection_color);
 }
