--- a/themes/wireframe.css
+++ b/themes/wireframe.css
@@ -6,39 +6,54 @@
 
 	/* Root */
 	--transition-time: 30ms;
-	--background-color: light-dark(#f9f9f9, #17181A);
+	--bg: light-dark(#f9f9f9, #17181A);
 
 	/* Typography */
 	--line-height: 2rem;
-	--font-size-h6: 4rem;
-	--font-family: Arial, Helvetica, sans-serif;
-	--color: light-dark(black, white);
-	--selection-bg-color: light-dark(cornflowerblue, cornflowerblue);
-	--selection-color: light-dark(white, black);
-
 	--font-size: 1rem;
-	--font-size-h6: 1rem;
-	--font-size-h5: 1.25rem;
-	--font-size-h4: 1.75rem;
-	--font-size-h3: 2.25rem;
-	--font-size-h2: 3rem;
-	--font-size-h1: 4rem;
+	--color: light-dark(black, white);
+	--font-family: Arial, Helvetica, sans-serif;
 
-	/* baseline grid */
-	--line-height-baseline-2x: calc(var(--line-height) * 2);
+	/* Headers */
+	--h6_font-size: 1rem;
+	--h5_font-size: 1.25rem;
+	--h4_font-size: 1.75rem;
+	--h3_font-size: 2.25rem;
+	--h2_font-size: 3rem;
+	--h1_font-size: 4rem;
+	--header-color: light-dark(darkblue, lightblue);
+	--header_font-family: Georgia, "Times New Roman", "Times", serif;
+	--sub-header_font-family: Georgia, "Times New Roman", "Times", serif;
 
-	--font-family:  Arial, Helvetica, sans-serif;
-	--font-family-headers:  Arial, Helvetica, sans-serif;
-	--font-family-input-text:  Arial, Helvetica, sans-serif;
-	--font-family-input-numbers:  Arial, Helvetica, sans-serif;
+	/* Selection */
+	--selection_bg-color: light-dark(cornflowerblue, cornflowerblue);
+	--selection_color: light-dark(white, black);
 
-	/* Grids */
-	--gap: 1rem;
+	/* Buttons */
+	--button_line-height: var(--line-height);
+	--button_font-size: var(--font-size);
+	--button_font-family: Arial, Helvetica, sans-serif;
+	--button_font-weight: 700;
+	--button_border: 1px solid light-dark(black, white);
+	--button_border-radius: 0px;
 
-	/* Articles */
-	--max-char-width: 64ch;
+	/* Text inputs */
+	--text-input_line-height: var(--line-height);
+	--text-input_font-size: var(--font-size);
+	--text-input_font-family: Arial, Helvetica, sans-serif;
+	--text-input_font-weight: 100;
+	--text-input_border: 1px solid light-dark(#dfdfdf, #787878);
+	--text-input_border-bottom: 1px solid light-dark(black, white);
 
-	/* Interactivity Affordances */
+	/* Number inputs */
+	--number-input_line-height: var(--line-height);
+	--number-input_font-size: var(--font-size);
+	--number-input_font-family: Arial, Helvetica, sans-serif;
+	--number-input_font-weight: 100;
+	--number-input_border: 1px solid light-dark(#dfdfdf, #787878);
+	--number-input_border-bottom: 1px solid light-dark(black, white);
+
+	/* Actions - Interactivity Affordances */
 	--action_bg-0: #f9f9f9; /* initial 'resting' state*/
 	--action_bg-1: #f5f5f5; /* hover state */
 	--action_bg-2: #dfdfdf; /* focus state */
@@ -46,16 +61,17 @@
 	--action_bg-4: #787878; /* checked state */
 	
 	--border: 1px solid light-dark(black, white);
-	
-	/* Buttons */
-	--button_border: 1px solid light-dark(black, white);
-	--button_border-radius: 0px;
-	--button_font-weight: 700;
-
-	/* Text inputs */
-	--text-input-border: 1px solid light-dark(#dfdfdf, #787878);
-	--text-input_border-bottom: 1px solid light-dark(black, white);
-
-	/* Focus */
+		/* Focus */
 	--outline: 4px solid cornflowerblue;
+
+	/* Baseline grid */
+	--baseline_line-height-2x: calc(var(--line-height) * 2);
+	--baseline_line-height-4x: calc(var(--line-height) * 4);
+	
+	/* Grids */
+	--gap: 1rem;
+
+	/* Articles */
+	--max-char-width: 64ch;
+
 }
